{"goBack":"Go back","title":"Sign In","emailAddress":"Email Address","password":"Password","showPassword":"Show password","hidePassword":"Hide password","signIn":"Sign In","newUser":"I’m a new user.","footerSignIn":"Sign In","authenticationFailed":"Authentication failed"}
