{"illustration":"Onboarding payment illustration","pagination":"Onboarding step {{step}} of 3","currentStep":"Current onboarding step {{step}}","step":"Onboarding step {{step}}","next":"Next","title":"Fastest Payment in the world","supportingText":"Integrate multiple payment methoods to help you up the process quickly"}
