{"profile":"Profile","search":"Search","welcomeBack":"Welcome back,","send":"Send","receive":"Receive","topup":"Topup","loan":"Loan","transaction":"Transaction","entertainment":"Entertainment","music":"Music","transactionCategory":"Transaction","shopping":"Shopping","appleStore":"Apple Store","spotify":"Spotify","moneyTransfer":"Money Transfer","grocery":"Grocery","paymentCard":"Payment card","contactlessPayment":"Contactless payment"}
